[package]
name = "actuator-tree"
version = "0.0.0"
edition = "2024"

[profile.release]
debug = 2

[dependencies]
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.1.0"

[dependencies.embassy-executor]
git = "https://github.com/embassy-rs/embassy"
features = ["nightly", "arch-cortex-m", "executor-thread", "defmt"]

[dependencies.embassy-futures]
git = "https://github.com/embassy-rs/embassy"
features = ["defmt"]

[dependencies.embassy-rp]
git = "https://github.com/embassy-rs/embassy"
features = ["rt", "unstable-pac", "critical-section-impl", "time-driver", "defmt", "rp2040"]

[dependencies.embassy-time]
git = "https://github.com/embassy-rs/embassy"
features = ["defmt"]

[dependencies.embassy-usb]
git = "https://github.com/embassy-rs/embassy"
features = ["defmt"]

[dependencies.panic-probe]
version = "1.0.0"
features = ["print-defmt"]

[dependencies.embedded-hal-async]
version = "1.0.0"

[dependencies.assign-resources]
version = "0.5.0"

[dependencies.static_cell]
version = "2.1.1"

[dependencies.portable-atomic]
version = "1.11.1"
features = ["critical-section"]
